syntax = "proto3";
package io.hbt.bubblegum.core.kademlia.protobuf;

import "BgKademliaPing.proto";
import "BgKademliaFindNodeRequest.proto";
import "BgKademliaFindNodeResponse.proto";

message KademliaMessage {
    string exchangeID = 1;
    string originHash = 2;
    string originIP = 3;
    int32 originPort = 4;

    oneof message {
        KademliaPing pingMessage = 5;
        KademliaFindNodeRequest findNodeRequest = 6;
        KademliaFindNodeResponse findNodeResponse = 7;
    }
}